@@ -114,6 +114,7 @@ fixed formatting. Tomasz Flendrich
 * Autoconf cleanup.  Harlan Stenn.
 * Unit test dist cleanup. Harlan Stenn.
 * Cleanup various test Makefile.am files.  Harlan Stenn.
+* Pthread autoconf macro cleanup.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
